k8s/mediaserver/joplin/manifests.yaml
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: joplin-data
#  labels:
#    recurring-job-group.longhorn.io/every-week: enabled
#    recurring-job.longhorn.io/source: enabled
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 1Gi
#  storageClassName: longhorn
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: joplin
spec:
  selector:
    app: joplin
  ports:
    - port: 22300
      targetPort: 22300
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
spec:
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      labels:
        app: joplin
    spec:
      containers:
        - name: joplin
          image: joplin/server:latest
          ports:
            - containerPort: 22300
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  rules:
    - host: joplin.enricoruggieri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joplin
                port:
                  number: 22300
  tls:
    - hosts:
        - joplin.enricoruggieri.com
      secretName: joplin-tls
